# Aiven-web-monitor

./: .coveragerc  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  sources.ini  tox.ini
avnwm/: __main__.py  cli.py
avnwm/core/: web.py
doc/source/: cli.rst  conf.py  ideas.rst  index.rst  web.rst
moniven/: __init__.py  __main__.py  cli.py
moniven/core/: web.py
sql/: schema.sql
tests/: __init__.py  conftest.py  factory.py  test_cli.py
tests/static/: ca.pem  schema.sql  service.key  site.html  site1.html  site2.html  site3.html  sources.ini
tests/test_acceptance/: test_cli.py
tests/test_unit/: test_web.py
